--- a/platforms/android/app/src/main/assets/www/css/estilos.css
+++ b/platforms/android/app/src/main/assets/www/css/estilos.css
@@ -12,7 +12,7 @@
     background-color: #272e35;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 1%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
